--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,9 +8,10 @@ overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+  project:
+    - "./tsconfig.json"
 plugins:
   - react
 rules: {
-  "semi": ["error", "always"],
-  "quotes": ["error", "double"]
+  "quotes": [2, "single", {"avoidEscape": true}]
 }
